--- a/index.html
+++ b/index.html
@@ -14,5 +14,12 @@
       named for its historical crescent shape. Croissants and other viennoiserie
       are made of a layered yeast-leavened dough
     </p>
+    <br/>
+    <div class="links">
+    <a href = "/">Home</a>
+    <a href = "/image.html">Photo</a>
+    <a href = "/contact.html">Contact</a>
+    </div>
+    </body>
   </body>
 </html>
