--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="/styles.css" />
+    <title>The best croissant in London - Croissant.com</title>
+    <meta name="description" content="Taste the best croissant in town" />
   </head>
   <body>
     <h1>🥐 Croissant</h1>
@@ -14,12 +15,10 @@
       named for its historical crescent shape. Croissants and other viennoiserie
       are made of a layered yeast-leavened dough
     </p>
-    <br/>
-    <div class="links">
-    <a href = "/">Home</a>
-    <a href = "/image.html">Photo</a>
-    <a href = "/contact.html">Contact</a>
-    </div>
-    </body>
+    <footer>
+      <a href="/" title="Home"> Homepage</a>
+      <a href="/image.html" title="Croissant photo"> Photo</a>
+      <a href="/contact.html" title="Contact Croissant.com"> Contact</a>
+    </footer>
   </body>
 </html>
