--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       are made of a layered yeast-leavened dough
     </p>
     <footer>
-      <a href="/" title="Home"> Homepage</a>
+      <a href="/" title="Home"> Home</a>
       <a href="/image.html" title="Croissant photo"> Photo</a>
       <a href="/contact.html" title="Contact Croissant.com"> Contact</a>
     </footer>
